<resources>
    <string name="app_name">Wagba</string>
    <string name="profile_button">Profile Button</string>
    <string name="cart">Cart</string>
    <string name="search">Search</string>
    <string name="restaurant_image">Restaurant Image</string>
    <string name="restaurants">Restaurants</string>
    <string name="dishes">Dishes</string>
    <string name="dish_image">Dish Image</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome! "</string>
    <string name="invalid_email">Email should belong to ASUFoE</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">Login failed.</string>
    <string name="network_error">Network error</string>
    <string name="authentication_failed">Authentication failed. Make sure username and password are correct.</string>
    <string name="user_exists">Signup failed. User with same email already exists.</string>
    <string name="logo">Logo</string>
    <string name="new_user">New user?</string>
    <string name="sign_up">Sign Up!</string>
    <string name="have_an_account">Already have an account?</string>
    <string name="or_continue_with">Or continue with</string>
    <string name="display_name_optional">Display Name (Optional)</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="home">Home</string>
    <string name="orders">Orders</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="description">Description</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="zero_one">01</string>
    <string name="dish_unavailable">Dish Unavailable</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="proceed_to_checkout">Proceed to Checkout</string>
    <string name="card_number">Card Number</string>
    <string name="cash">Cash</string>
    <string name="thumbs_up">Thumbs Up</string>
    <string name="order_complete">Order Complete</string>
    <string name="go_back_to_home">Go back to home</string>
    <string name="trace_order">Trace Order</string>
    <string name="name_on_card">Name on Card</string>
    <string name="last_name">Last Name</string>
    <string name="mm_yy">MM/YY</string>
    <string name="pay_now">Pay Now</string>
    <string name="total">Total</string>
    <string name="no_restaurants_available">Sorry, no restaurants are currently available.</string>
    <string name="no_dishes_available">Sorry, no dishes are currently available.</string>
    <string name="add_items_to_cart">Add items to cart!</string>
    <string name="program">Program</string>
    <string name="change_program">Change program</string>
    <string name="level">Level</string>
    <string name="change_level">Change level</string>
    <string name="credit_card">Credit Card</string>
    <string name="pickup_location">Pickup Location</string>
    <string name="gate_2">Gate 2</string>
    <string name="gate_3">Gate 3</string>
    <string name="twelve_pm">12PM</string>
    <string name="three_pm">3PM</string>
    <string name="pickup_time">Pickup Time*</string>
    <string name="order_placing_note">*Note: As of now, 12PM orders should be placed before 10PM and 3PM orders should be placed before 1PM.</string>
    <string name="display_name">Display Name</string>
    <string name="confirm_change">Confirm change</string>
    <string name="profile_img_change_failed">An unexpected error occurred while updating image</string>
    <string name="no_orders_available">No orders have been made yet. Make an order to track its status!</string>
    <string-array name="programs">
        <item>Freshman</item>
        <item>Mechanical Engineering</item>
        <item>Electrical Engineering</item>
        <item>Architectural Engineering</item>
        <item>Civil Engineering</item>
        <item>Design and Production Engineering</item>
        <item>Mechanical Power Engineering</item>
        <item>Automotive Engineering</item>
        <item>Mechatronics Engineering</item>
        <item>Electrical Power and Machines Engineering</item>
        <item>Electronics and Communications Engineering</item>
        <item>Computer and Systems Engineering</item>
        <item>Structural Engineering</item>
        <item>Water Engineering and Hydraulic Structures</item>
        <item>Utilities and Infrastructure</item>
        <item>Materials Engineering</item>
        <item>Manufacturing Engineering</item>
        <item>Mechatronics Engineering and Automation</item>
        <item>Landscape Architecture</item>
        <item>Environmental Architecture and Urbanism</item>
        <item>Housing Architecture and Urban Development</item>
        <item>Communication Systems Engineering</item>
        <item>Energy and Renewable Energy Engineering</item>
        <item>Computer Engineering and Software Systems</item>
        <item>Building Engineering</item>
        <item>Civil Infrastructure Engineering</item>
    </string-array>
    <string-array name="levels">
        <item>Freshman</item>
        <item>Sophomore</item>
        <item>Junior</item>
        <item>Senior-1</item>
        <item>Senior-2</item>
    </string-array>
</resources>