<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.OrderCompleteFragment"
    android:background="?attr/colorSecondaryVariant">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/thumbs_up"
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/trace_order_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@drawable/ic_baseline_thumb_up_32"
            android:contentDescription="@string/thumbs_up"
            app:tint="?attr/colorOnSecondary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/thumbs_up"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/order_complete"
            android:textSize="24sp"
            android:textColor="?attr/colorOnSecondary"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/trace_order_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/go_back_home_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            style="@style/LoginScreenButtons"
            android:textSize="16sp"
            android:text="@string/trace_order" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/go_back_home_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            style="@style/PaymentButtons"
            app:cornerRadius="24dp"
            android:text="@string/go_back_to_home" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>