<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSecondaryVariant"
    tools:context=".ui.fragments.MainFragment">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.SearchView
                android:id="@+id/search_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/dishes_text_scrollview"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="8dp"
                android:padding="8dp"
                app:queryHint="Search restaurants..."
                app:iconifiedByDefault="false"
                app:searchIcon="@null"
                android:background="?attr/colorSecondary"
                app:queryBackground="@color/transparent" />

            <TextView
                android:id="@+id/dishes_text_scrollview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/search_bar"
                app:layout_constraintBottom_toTopOf="@id/dishes_view_switcher"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/dishes"
                style="@style/Label"/>

            <ViewSwitcher
                android:id="@+id/dishes_view_switcher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                app:layout_constraintTop_toBottomOf="@id/dishes_text_scrollview"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/dish_types_recyclerview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <TextView
                    android:id="@+id/no_dishes_found_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/no_dishes_available"
                    android:textColor="?attr/colorOnSecondary"
                    android:textSize="16sp" />

            </ViewSwitcher>

            <TextView
                android:id="@+id/restaurants_text_scrollview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/dishes_view_switcher"
                app:layout_constraintBottom_toTopOf="@id/restaurants_view_switcher"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/restaurants"
                style="@style/Label"/>

            <ViewSwitcher
                android:id="@+id/restaurants_view_switcher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/restaurants_text_scrollview"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/restaurants_recyclerview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

                <TextView
                    android:id="@+id/no_restaurants_found_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/no_restaurants_available"
                    android:textColor="?attr/colorOnSecondary"
                    android:textSize="16sp" />

            </ViewSwitcher>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</FrameLayout>